// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`state > addFilesToPackages 1`] = `
{
  "files": {
    "./foo": {
      "current": "./foo",
      "errorCount": 0,
      "origin": "./foo",
      "package": "./bar",
    },
  },
  "name": "bar",
  "packageMap": {
    "./bar": [
      "./foo",
    ],
  },
}
`;

exports[`state > constructor should init state to disk 1`] = `
{
  "files": {},
  "name": "foo",
  "packageMap": {},
}
`;

exports[`state > constructor should load existed state 1`] = `
{
  "files": {
    "./foo": {
      "current": "foo",
      "errorCount": 0,
      "origin": "foo",
      "package": "./bar",
    },
  },
  "name": "bar",
  "packageMap": {
    "bar": [
      "./foo",
    ],
  },
}
`;

exports[`state > does not contain absolute paths in state file 1`] = `
{
  "files": {},
  "name": "bar",
  "packageMap": {
    "./sample-package": [],
  },
}
`;

exports[`state > does not contain absolute paths in state file 2`] = `
{
  "files": {
    "./bar": {
      "current": null,
      "errorCount": 0,
      "origin": "./bar",
      "package": "./sample-package",
    },
    "./foo": {
      "current": null,
      "errorCount": 0,
      "origin": "./foo",
      "package": "./sample-package",
    },
  },
  "name": "bar",
  "packageMap": {
    "./sample-package": [
      "./foo",
      "./bar",
    ],
  },
}
`;

exports[`state > getPackageMigrateProgress 1`] = `
{
  "files": {
    "./bar.ts": {
      "current": null,
      "errorCount": 0,
      "origin": "./bar.ts",
      "package": "sample-package",
    },
    "./foo.ts": {
      "current": "./foo.ts",
      "errorCount": 0,
      "origin": "./foo.ts",
      "package": "sample-package",
    },
  },
  "name": "bar",
  "packageMap": {
    "bar": [
      "./foo.ts",
      "./bar.ts",
    ],
    "sample-package": [
      "./foo.ts",
      "./bar.ts",
    ],
  },
}
`;

exports[`state > getVerifiedStore 1`] = `
{
  "files": {
    "./foo": {
      "current": null,
      "errorCount": 2,
      "origin": "foo",
      "package": "./bar",
    },
  },
  "name": "bar",
  "packageMap": {
    "./bar": [
      "./foo",
    ],
  },
}
`;
